@@ -1,3 +1,6 @@
+20010628
+ - (djm) Sync openbsd-compat with -current libc
+
 20010627
  - (djm) Reintroduce pam_session call for non-pty sessions.
  - (djm) Remove redundant and incorrect test for max auth attempts in 
@@ -5809,4 +5812,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1334 2001/06/28 00:24:41 stevesk Exp $
+$Id: ChangeLog,v 1.1335 2001/06/28 04:48:28 djm Exp $
